2008-09-10	fabian

	* Profile name changes or deletion now update bookmarks (bug #1762237).
	* Add bookmark dialog now clears the text entries, and automatically 
	  fills profiles from the selected bookmark (#1815642).
	
2008-09-09	fabian

	* Fixed a bug that crashes iTerm when one scrolls up with a lot of new text coming in.
    * Fixed a UTF decoding problem (#1867339, by sakamoto).
    * Fixed a bug when detecting user scroll.
    * Cleaned up code for 0.9.5.0909
	* Fixed a configure panel bug that fails to update the "blur" info.

2008-09-08	fabian

	* UI change: mid-button to paste -> mid-button to paste from clipboard.
	* Now "prompt on Close" only prompts when multiple sessions are open.
	* Added code to check OS version for the blur stuff.

2008-09-07	fabian

	* Incorporated the "blur" patch provided by Dean Scarff.
	* Incorporated the "drop folder" patch provided by Rafael Gaspar (#1789464).
	* Fixed the URL characters (#1773764)
	* Fixed the transparency setting bug.
	
2008-09-06	ujwal
	
	* Moved Growl notification of session bell from VT100Screen to VT100Session.
	* Disabled session bell Growl notification when key repeat is detected.
	
2008-09-04	fabian

	* Removed the close button of the About window (#1916989).
	* Fixed a script error (#1883879).
	* Fixed resizing background image problem (#1871380).
	* Fixed a bug that closes the wrong tab when using contextual menu. (#1916982)
	
2008-09-03	fabian

	* Fixed a bug that causes iTerm to crash when executing scripts.
	
2008-09-03  delx

	* A few documentation spelling and grammar fixes.
	* Fixed borders once and for all.
	* Full-screen mode hides menubar rather than pretending to be
	  a screensaver. This fixes Apple-Tab and other things.
	* Fixed enter key on the numeric keypad in keypad app mode
	* Fixed iTerm so that it can start with no preferences file again

2008-08-27	fabian

	* Incorporated two patches provided by Akinori MUSHA (knu). They fixed two double-width character issues.
	